Unit tests added for the class Node in the TDD.

--- a/modules/base/test/CMakeLists.txt
+++ b/modules/base/test/CMakeLists.txt
@@ -1,3 +1,4 @@
 CXXTEST_ADD_TDD(openma_base_any anyTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_logger loggerTest.cpp base)
+CXXTEST_ADD_TDD(openma_base_node nodeTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_object objectTest.cpp base)
