New class ma::TimeSequence to store multidimensional time series.

--- a/modules/base/test/CMakeLists.txt
+++ b/modules/base/test/CMakeLists.txt
@@ -3,3 +3,4 @@ CXXTEST_ADD_TDD(openma_base_event eventTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_logger loggerTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_node nodeTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_object objectTest.cpp base)
+CXXTEST_ADD_TDD(openma_base_timesequence timesequenceTest.cpp base)
