New class to read device content.

--- a/modules/io/CMakeLists.txt
+++ b/modules/io/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(OPENMA_IO_SRCS
   src/file.cpp
   src/handler.cpp
   src/handlerplugin.cpp
+  src/handlerreader.cpp
 )
 
 # ADD_OPENMA_MODULE(io)
