--- a/modules/io/CMakeLists.txt
+++ b/modules/io/CMakeLists.txt
@@ -10,10 +10,15 @@ SET(OPENMA_IO_SRCS
 
 # ADD_OPENMA_MODULE(io)
 
-ADD_LIBRARY(io ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_IO_SRCS})
+# Variable OPENMA_STATIC_IO_PLUGINS_SRCS is used for static build
+SET(OPENMA_STATIC_IO_PLUGINS_SRCS "" CACHE INTERNAL "")
+ADD_SUBDIRECTORY("plugins")
+
+ADD_LIBRARY(io ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_IO_SRCS} ${OPENMA_STATIC_IO_PLUGINS_SRCS})
 TARGET_LINK_LIBRARIES(io base)
 TARGET_INCLUDE_DIRECTORIES(io PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/plugins>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
   $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
   $<INSTALL_INTERFACE:include>
