Unit tests to test the ma::io::HandlerReader class with C3D data format. Several other tests still need to be added to verify the behaviour of the handler againt format corruption.

--- a/modules/io/test/CMakeLists.txt
+++ b/modules/io/test/CMakeLists.txt
@@ -14,3 +14,4 @@ CXXTEST_ADD_TDD(openma_io_binarystream binarystreamTest.cpp io)
 CXXTEST_ADD_TDD(openma_io_buffer bufferTest.cpp io)
 CXXTEST_ADD_TDD(openma_io_file fileTest.cpp io)
 CXXTEST_ADD_TDD(openma_io_handlerplugin handlerpluginTest.cpp io)
+CXXTEST_ADD_TDD(openma_io_handlerplugin_c3d trial/c3dhandlerTest.cpp io)
