New class ma::Date.

--- a/modules/base/test/CMakeLists.txt
+++ b/modules/base/test/CMakeLists.txt
@@ -1,4 +1,5 @@
 CXXTEST_ADD_TDD(openma_base_any anyTest.cpp base)
+CXXTEST_ADD_TDD(openma_base_date dateTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_event eventTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_logger loggerTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_node nodeTest.cpp base)
