--- a/modules/base/test/CMakeLists.txt
+++ b/modules/base/test/CMakeLists.txt
@@ -4,5 +4,6 @@ CXXTEST_ADD_TDD(openma_base_event eventTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_logger loggerTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_node nodeTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_object objectTest.cpp base)
+CXXTEST_ADD_TDD(openma_base_subject subjectTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_timesequence timesequenceTest.cpp base)
 CXXTEST_ADD_TDD(openma_base_trial trialTest.cpp base)
