Class ma::body::Position renamed ma::body::Point due to a possible confusion with the class ma::maths::Position.

--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -1,7 +1,7 @@
 SET(OPENMA_BODY_SRCS
   src/joint.cpp
   src/model.cpp
-  src/position.cpp
+  src/point.cpp
   src/referenceframe.cpp
   src/segment.cpp
 )
