--- a/modules/body/test/CMakeLists.txt
+++ b/modules/body/test/CMakeLists.txt
@@ -1,4 +1,5 @@
 CXXTEST_ADD_TDD(openma_body_joint jointTest.cpp body)
+CXXTEST_ADD_TDD(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_model modelTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_position pointTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_segment segmentTest.cpp body)
