Work in progress on the development of a helper class to create and reconstruct a model based on the Plug in Gait marker set.

--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(OPENMA_BODY_SRCS
   src/joint.cpp
   src/landmarkstranslator.cpp
   src/model.cpp
+  src/plugingait.cpp
   src/point.cpp
   src/referenceframe.cpp
   src/segment.cpp
