--- a/modules/body/test/CMakeLists.txt
+++ b/modules/body/test/CMakeLists.txt
@@ -2,6 +2,7 @@ CXXTEST_ADD_TDD(openma_body_joint jointTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_model modelTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_position pointTest.cpp body)
-CXXTEST_ADD_TDD(openma_body_plugingait plugingaitTest.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
+CXXTEST_ADD_TDD(openma_body_plugingait_calibration plugingaitTest_calibration.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
+CXXTEST_ADD_TDD(openma_body_plugingait_reconstruction plugingaitTest_reconstruction.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 CXXTEST_ADD_TDD(openma_body_segment segmentTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_utils utilsTest.cpp body)
