New unit tests related to the verification of computed joint angles for the PluginGait skeleton helper.

--- a/modules/body/test/CMakeLists.txt
+++ b/modules/body/test/CMakeLists.txt
@@ -4,5 +4,6 @@ CXXTEST_ADD_TDD(openma_body_model modelTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_position pointTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_plugingait_calibration plugingaitTest_calibration.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 CXXTEST_ADD_TDD(openma_body_plugingait_reconstruction plugingaitTest_reconstruction.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
+CXXTEST_ADD_TDD(openma_body_plugingait_kinematics plugingaitTest_kinematics.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 CXXTEST_ADD_TDD(openma_body_segment segmentTest.cpp body)
 CXXTEST_ADD_TDD(openma_body_utils utilsTest.cpp body)
