--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -30,6 +30,6 @@ IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
   SET_TARGET_PROPERTIES(body PROPERTIES COMPILE_FLAGS -DOPENMA_BODY_STATIC_DEFINE)
 ENDIF()
 
-IF(BUILD_TESTING)
+IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
