--- a/modules/maths/CMakeLists.txt
+++ b/modules/maths/CMakeLists.txt
@@ -22,6 +22,6 @@ IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
   SET_TARGET_PROPERTIES(maths PROPERTIES COMPILE_FLAGS -DOPENMA_MATHS_STATIC_DEFINE)
 ENDIF()
 
-IF(BUILD_TESTING)
+IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
