--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -27,6 +27,6 @@ IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
   SET_TARGET_PROPERTIES(base PROPERTIES COMPILE_FLAGS -DOPENMA_BASE_STATIC_DEFINE)
 ENDIF()
 
-IF(BUILD_TESTING)
+IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
