--- a/modules/io/CMakeLists.txt
+++ b/modules/io/CMakeLists.txt
@@ -32,6 +32,6 @@ IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
   SET_TARGET_PROPERTIES(io PROPERTIES COMPILE_FLAGS -DOPENMA_IO_STATIC_DEFINE)
 ENDIF()
 
-IF(BUILD_TESTING)
+IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
