CMake function CXXTEST_ADD_TDD renamed ADD_CXXTEST_TESTDRIVER

--- a/modules/io/test/CMakeLists.txt
+++ b/modules/io/test/CMakeLists.txt
@@ -10,9 +10,9 @@ EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E make_directory "${OPENMA_BINARY_DIR}
 # Configure the file paths
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tdd_file_path.h.in ${CMAKE_CURRENT_BINARY_DIR}/tdd_file_path.h)
 
-CXXTEST_ADD_TDD(openma_io ioTest.cpp io)
-CXXTEST_ADD_TDD(openma_io_binarystream binarystreamTest.cpp io)
-CXXTEST_ADD_TDD(openma_io_buffer bufferTest.cpp io)
-CXXTEST_ADD_TDD(openma_io_file fileTest.cpp io)
-CXXTEST_ADD_TDD(openma_io_handlerplugin handlerpluginTest.cpp io)
-CXXTEST_ADD_TDD(openma_io_handlerplugin_c3d trial/c3dhandlerTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io ioTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_binarystream binarystreamTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_buffer bufferTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_file fileTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin handlerpluginTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_c3d trial/c3dhandlerTest.cpp io)
