--- a/modules/base/test/c++/CMakeLists.txt
+++ b/modules/base/test/c++/CMakeLists.txt
@@ -1,9 +1,9 @@
-CXXTEST_ADD_TDD(openma_base_any anyTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_date dateTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_event eventTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_logger loggerTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_node nodeTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_object objectTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_subject subjectTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_timesequence timesequenceTest.cpp base)
-CXXTEST_ADD_TDD(openma_base_trial trialTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_any anyTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_date dateTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_event eventTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_logger loggerTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_node nodeTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_object objectTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_subject subjectTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_timesequence timesequenceTest.cpp base)
+ADD_CXXTEST_TESTDRIVER(openma_base_trial trialTest.cpp base)
