All "tdd_*" files and variables were renamed "test_*".

--- a/modules/io/test/CMakeLists.txt
+++ b/modules/io/test/CMakeLists.txt
@@ -8,7 +8,7 @@ FILE(TO_CMAKE_PATH "${OPENMA_TESTING_DATA_PATH}" OPENMA_TESTING_DATA_PATH)
 # Build the directories used to write files in some unit/regression tests
 EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E make_directory "${OPENMA_BINARY_DIR}/test/data/output/c3d")
 # Configure the file paths
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tdd_file_path.h.in ${CMAKE_CURRENT_BINARY_DIR}/tdd_file_path.h)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/test_file_path.h.in ${CMAKE_CURRENT_BINARY_DIR}/test_file_path.h)
 
 ADD_CXXTEST_TESTDRIVER(openma_io ioTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_binarystream binarystreamTest.cpp io)
