Wrapping of the module 'base' activated! WARNING: This is still in development!

--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -27,6 +27,10 @@ IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
   SET_TARGET_PROPERTIES(base PROPERTIES COMPILE_FLAGS -DOPENMA_BASE_STATIC_DEFINE)
 ENDIF()
 
+IF(BUILD_LANGUAGE_BINDINGS)
+  ADD_SUBDIRECTORY(swig)
+ENDIF()
+
 IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
