Code and script adapted to use the 'bindings' module.

--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -2,8 +2,7 @@ IF(BUILD_MATLAB_BINDINGS)
   SET(BASE_MATLAB_SRCS "base.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma")
   SET_SOURCE_FILES_PROPERTIES("base.i" PROPERTIES CPLUSPLUS ON)
-  SET(SWIG_MODULE_baseMEX_EXTRA_DEPS
-    "reference_counting.i"
+  SET(SWIG_MODULE_maMEX_EXTRA_DEPS
     "base_matlab.i"
     "base/any.i"
     "base/event.i"
@@ -12,17 +11,15 @@ IF(BUILD_MATLAB_BINDINGS)
     "base/subject.i"
     "base/timesequence.i"
     "base/trial.i")
-  SET(SWIG_MODULE_baseMEX_EXTRA_FLAGS
+  SET(SWIG_MODULE_maMEX_EXTRA_FLAGS
     # "-debug-tmsearch"
-    "-module" "ma"
-    "-pkgname" "ma"
-    "-mexname" "baseMEX"
+    "-I${PROJECT_SOURCE_DIR}/modules/bindings/swig"
     "-I${SWIG_DIR}/Lib/matlab"
     "-I${SWIG_DIR}/Lib")
-  SWIG_ADD_MODULE(baseMEX matlab "${BASE_MATLAB_SRCS}")
-  TARGET_INCLUDE_DIRECTORIES(baseMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
-  SWIG_LINK_LIBRARIES(baseMEX base ${MATLAB_LIBRARIES})
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_baseMEX_REAL_NAME} PROPERTIES
+  SWIG_ADD_MODULE(maMEX matlab "${BASE_MATLAB_SRCS}")
+  TARGET_INCLUDE_DIRECTORIES(maMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
+  SWIG_LINK_LIBRARIES(maMEX base bindings ${MATLAB_LIBRARIES})
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_maMEX_REAL_NAME} PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma"
     PREFIX ""
     SUFFIX ".${MATLAB_MEXFILE_EXT}")
