--- a/modules/io/swig/CMakeLists.txt
+++ b/modules/io/swig/CMakeLists.txt
@@ -2,17 +2,17 @@ IF(BUILD_MATLAB_BINDINGS)
   SET(IO_MATLAB_SRCS "io.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma")
   SET_SOURCE_FILES_PROPERTIES("io.i" PROPERTIES CPLUSPLUS ON)
-  SET(SWIG_MODULE_ioMEX_EXTRA_DEPS
-    "../../base/swig/reference_counting.i")
+  # SET(SWIG_MODULE_ioMEX_EXTRA_DEPS )
   SET(SWIG_MODULE_ioMEX_EXTRA_FLAGS
     # "-debug-tmsearch"
     "-pkgname" "ma/+io"
     "-I${PROJECT_SOURCE_DIR}/modules/base/swig"
+    "-I${PROJECT_SOURCE_DIR}/modules/bindings/swig"
     "-I${SWIG_DIR}/Lib/matlab"
     "-I${SWIG_DIR}/Lib")
   SWIG_ADD_MODULE(ioMEX matlab "${IO_MATLAB_SRCS}")
   TARGET_INCLUDE_DIRECTORIES(ioMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
-  SWIG_LINK_LIBRARIES(ioMEX io ${MATLAB_LIBRARIES})
+  SWIG_LINK_LIBRARIES(ioMEX io bindings ${MATLAB_LIBRARIES})
   SET_TARGET_PROPERTIES(${SWIG_MODULE_ioMEX_REAL_NAME} PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma"
     PREFIX ""
