CMake 3.4.2 error: No OpenMATargets

--- a/modules/bindings/CMakeLists.txt
+++ b/modules/bindings/CMakeLists.txt
@@ -21,4 +21,11 @@ IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
   SET_TARGET_PROPERTIES(bindings PROPERTIES COMPILE_FLAGS -DOPENMA_BINDINGS_STATIC_DEFINE)
 ENDIF()
 
+INSTALL(TARGETS bindings EXPORT OpenMATargets
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  RUNTIME DESTINATION lib  
+  INCLUDES DESTINATION lib
+)
+
 ENDIF()
