--- a/modules/maths/CMakeLists.txt
+++ b/modules/maths/CMakeLists.txt
@@ -25,3 +25,10 @@ ENDIF()
 IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
+
+INSTALL(TARGETS maths EXPORT OpenMATargets
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  RUNTIME DESTINATION lib  
+  INCLUDES DESTINATION lib
+)
