--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -34,3 +34,10 @@ ENDIF()
 IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
+
+INSTALL(TARGETS base EXPORT OpenMATargets
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  RUNTIME DESTINATION lib  
+  INCLUDES DESTINATION lib
+)
