--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -37,3 +37,10 @@ ENDIF()
 IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
+
+INSTALL(TARGETS body EXPORT OpenMATargets
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  RUNTIME DESTINATION lib  
+  INCLUDES DESTINATION lib
+)
