--- a/modules/io/CMakeLists.txt
+++ b/modules/io/CMakeLists.txt
@@ -39,3 +39,10 @@ ENDIF()
 IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
+
+INSTALL(TARGETS io EXPORT OpenMATargets
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  RUNTIME DESTINATION lib  
+  INCLUDES DESTINATION lib
+)
