MSVC needs to have the symbol _USE_MATH_DEFINES defined to have access to the symbol M_PI.

--- a/modules/maths/test/CMakeLists.txt
+++ b/modules/maths/test/CMakeLists.txt
@@ -3,3 +3,6 @@ ADD_CXXTEST_TESTDRIVER(openma_maths_pose poseTest.cpp maths)
 ADD_CXXTEST_TESTDRIVER(openma_maths_map mapTest.cpp maths)
 ADD_CXXTEST_TESTDRIVER(openma_maths_blockop blockopTest.cpp maths)
 ADD_CXXTEST_TESTDRIVER(openma_maths_mix mixTest.cpp maths)
+
+# To have access to the symbol M_PI
+SET_TARGET_PROPERTIES(test_openma_maths_pose PROPERTIES COMPILE_DEFINITIONS "_USE_MATH_DEFINES")
