--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -27,6 +27,7 @@ SET_TARGET_PROPERTIES(body PROPERTIES ${OPENMA_LIBRARY_PROPERTIES})
 IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
   SET_TARGET_PROPERTIES(body PROPERTIES COMPILE_FLAGS -DOPENMA_BODY_STATIC_DEFINE)
 ENDIF()
+SET_TARGET_PROPERTIES(body PROPERTIES COMPILE_DEFINITIONS "_USE_MATH_DEFINES")
 
 IF(BUILD_LANGUAGE_BINDINGS)
   ADD_SUBDIRECTORY(swig)
