Workaround for the type char16_t between Matlab and MSVC > 2010. This code might need to go in the SWIG sources.

--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -22,6 +22,7 @@ IF(BUILD_MATLAB_BINDINGS)
   TARGET_INCLUDE_DIRECTORIES(maMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
   SWIG_LINK_LIBRARIES(maMEX base bindings ${MATLAB_LIBRARIES})
   SET_TARGET_PROPERTIES(${SWIG_MODULE_maMEX_REAL_NAME} PROPERTIES
+    COMPILE_DEFINITIONS "_SWIG_MATLAB"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma"
     PREFIX ""
     SUFFIX ".${MATLAB_MEXFILE_EXT}")
