--- a/modules/body/swig/CMakeLists.txt
+++ b/modules/body/swig/CMakeLists.txt
@@ -19,6 +19,7 @@ IF(BUILD_MATLAB_BINDINGS)
   TARGET_INCLUDE_DIRECTORIES(bodyMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
   SWIG_LINK_LIBRARIES(bodyMEX body bindings ${MATLAB_LIBRARIES})
   SET_TARGET_PROPERTIES(${SWIG_MODULE_bodyMEX_REAL_NAME} PROPERTIES
+    COMPILE_DEFINITIONS "_SWIG_MATLAB"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma"
     PREFIX ""
     SUFFIX ".${MATLAB_MEXFILE_EXT}")
