--- a/modules/io/swig/CMakeLists.txt
+++ b/modules/io/swig/CMakeLists.txt
@@ -17,6 +17,7 @@ IF(BUILD_MATLAB_BINDINGS)
   TARGET_INCLUDE_DIRECTORIES(ioMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
   SWIG_LINK_LIBRARIES(ioMEX io bindings ${MATLAB_LIBRARIES})
   SET_TARGET_PROPERTIES(${SWIG_MODULE_ioMEX_REAL_NAME} PROPERTIES
+    COMPILE_DEFINITIONS "_SWIG_MATLAB"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma"
     PREFIX ""
     SUFFIX ".${MATLAB_MEXFILE_EXT}")
