Let's just comment the lines instead of remove them.

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ env:
   
   matrix:
     - SELECTED_COMPILER=Clang WITH_BUILD_TYPE=Release WITH_SHARED_LIBS=1 WITH_COVERITY_ENABLED=0 WITH_COVERALLS_ENABLED=0
+    # - SELECTED_COMPILER=GCC   WITH_BUILD_TYPE=Release WITH_SHARED_LIBS=1 WITH_COVERITY_ENABLED=0 WITH_COVERALLS_ENABLED=0
+    # - SELECTED_COMPILER=GCC   WITH_BUILD_TYPE=Release WITH_SHARED_LIBS=0 WITH_COVERITY_ENABLED=0 WITH_COVERALLS_ENABLED=0
     - SELECTED_COMPILER=Clang WITH_BUILD_TYPE=Debug   WITH_SHARED_LIBS=0 WITH_COVERITY_ENABLED=0 WITH_COVERALLS_ENABLED=0
       
 matrix:
