--- a/modules/body/test/CMakeLists.txt
+++ b/modules/body/test/CMakeLists.txt
@@ -2,6 +2,7 @@ ADD_CXXTEST_TESTDRIVER(openma_body_joint jointTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_model modelTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_position pointTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_plugingait plugingaitTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_calibration plugingaitTest_calibration.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_reconstruction plugingaitTest_reconstruction.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_kinematics plugingaitTest_kinematics.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
