--- a/modules/io/test/CMakeLists.txt
+++ b/modules/io/test/CMakeLists.txt
@@ -15,4 +15,4 @@ ADD_CXXTEST_TESTDRIVER(openma_io_binarystream binarystreamTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_buffer bufferTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_file fileTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin handlerpluginTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_c3d trial/c3dhandlerTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_reader_c3d trial/c3dreaderTest.cpp io)
