Module 'maths' renamed 'math' (US vs UK).

--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -13,7 +13,7 @@ SET(OPENMA_BODY_SRCS
 )
 
 ADD_LIBRARY(body ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_BODY_SRCS})
-TARGET_LINK_LIBRARIES(body base maths)
+TARGET_LINK_LIBRARIES(body base math)
 TARGET_INCLUDE_DIRECTORIES(body PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
