--- a/modules/maths/CMakeLists.txt
+++ b/modules/maths/CMakeLists.txt
@@ -2,29 +2,29 @@ SET(OPENMA_MATHS_SRCS
   src/utils.cpp
 )
 
-ADD_LIBRARY(maths ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_MATHS_SRCS})
-TARGET_LINK_LIBRARIES(maths base)
-TARGET_INCLUDE_DIRECTORIES(maths PUBLIC
+ADD_LIBRARY(math ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_MATHS_SRCS})
+TARGET_LINK_LIBRARIES(math base)
+TARGET_INCLUDE_DIRECTORIES(math PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
   $<BUILD_INTERFACE:${OPENMA_SOURCE_DIR}/3rdparty/eigen3>
   $<INSTALL_INTERFACE:include>
   $<INSTALL_INTERFACE:include/3rdparty/eigen3>
 )
-GENERATE_EXPORT_HEADER(maths
+GENERATE_EXPORT_HEADER(math
                        BASE_NAME OPENMA_MATHS
-                       EXPORT_FILE_NAME include/openma/maths_export.h)
+                       EXPORT_FILE_NAME include/openma/math_export.h)
 
-SET_TARGET_PROPERTIES(maths PROPERTIES ${OPENMA_LIBRARY_PROPERTIES})
+SET_TARGET_PROPERTIES(math PROPERTIES ${OPENMA_LIBRARY_PROPERTIES})
 IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
-  SET_TARGET_PROPERTIES(maths PROPERTIES COMPILE_FLAGS -DOPENMA_MATHS_STATIC_DEFINE)
+  SET_TARGET_PROPERTIES(math PROPERTIES COMPILE_FLAGS -DOPENMA_MATHS_STATIC_DEFINE)
 ENDIF()
 
 IF(BUILD_UNIT_TESTS)
   ADD_SUBDIRECTORY(test)
 ENDIF()
 
-INSTALL(TARGETS maths EXPORT OpenMATargets
+INSTALL(TARGETS math EXPORT OpenMATargets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   RUNTIME DESTINATION lib  
