Regression tests for the writing of the C3D format are not activated.

--- a/modules/io/test/CMakeLists.txt
+++ b/modules/io/test/CMakeLists.txt
@@ -16,3 +16,4 @@ ADD_CXXTEST_TESTDRIVER(openma_io_buffer bufferTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_file fileTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin handlerpluginTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_reader_c3d trial/c3dreaderTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_writer_c3d trial/c3dwriterTest.cpp io)
