Extra semicolons when more than one handler is included.

--- a/modules/io/plugins/CMakeLists.txt
+++ b/modules/io/plugins/CMakeLists.txt
@@ -22,9 +22,9 @@ FOREACH(_format_path ${FORMATS_PATHS})
         SET(OPENMA_STATIC_IO_PLUGINS_SRCS ${OPENMA_STATIC_IO_PLUGINS_SRCS} ${OPENMA_IO_PLUGIN_SRCS} CACHE INTERNAL "")
         STRING(TOLOWER ${OPENMA_IO_PLUGIN_NAME} OPENMA_IO_PLUGIN_HEADER)
         SET(OPENMA_STATIC_IO_PLUGIN_LOADER_INCLUDES
-          ${OPENMA_STATIC_IO_PLUGIN_LOADER_INCLUDES} "#include \"${_format_path}/${_handler_path}/${OPENMA_IO_PLUGIN_HEADER}.h\"\n")
+          "${OPENMA_STATIC_IO_PLUGIN_LOADER_INCLUDES}#include \"${_format_path}/${_handler_path}/${OPENMA_IO_PLUGIN_HEADER}.h\"\n")
         SET(OPENMA_STATIC_IO_PLUGIN_LOADER_COMMANDS
-          ${OPENMA_STATIC_IO_PLUGIN_LOADER_COMMANDS} "plugin = new ${OPENMA_IO_PLUGIN_NAME}; manager->add(plugin);\n")
+          "${OPENMA_STATIC_IO_PLUGIN_LOADER_COMMANDS}  plugin = new ${OPENMA_IO_PLUGIN_NAME}; manager->add(plugin);\n")
       ENDIF()
     ENDFOREACH()
   ENDIF()
