Work in progress for the development of a Python bnding.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,8 @@ ENDIF()
 
 # Build language bindings
 OPTION(BUILD_MATLAB_BINDINGS "Build bindings to use OpenMA in Matlab." OFF)
-IF(BUILD_MATLAB_BINDINGS)
+OPTION(BUILD_PYTHON_BINDINGS "Build bindings to use OpenMA in Python." OFF)
+IF(BUILD_MATLAB_BINDINGS OR BUILD_PYTHON_BINDINGS)
   SET(BUILD_LANGUAGE_BINDINGS 1)
   INCLUDE(${OPENMA_CMAKE_MODULE_PATH}/OpenMALanguageBindings.cmake)
 ELSE()
