--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -1,23 +1,26 @@
+SET_SOURCE_FILES_PROPERTIES("base.i" PROPERTIES CPLUSPLUS ON)
+SET(SWIG_MODULE_base_EXTRA_DEPS
+  "base_matlab.i"
+  "base/any.i"
+  "base/event.i"
+  "base/node.i"
+  "base/object.i"
+  "base/subject.i"
+  "base/timesequence.i"
+  "base/trial.i")
+SET(SWIG_MODULE_base_EXTRA_FLAGS
+  # "-debug-tmsearch"
+  "-I${PROJECT_SOURCE_DIR}/modules/bindings/swig"
+  "-I${SWIG_DIR}/Lib")
+
 IF(BUILD_MATLAB_BINDINGS)
   SET(BASE_MATLAB_SRCS
     "base.i"
     "../../bindings/include/openma/matlab/mexFunction.def")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma")
-  SET_SOURCE_FILES_PROPERTIES("base.i" PROPERTIES CPLUSPLUS ON)
-  SET(SWIG_MODULE_maMEX_EXTRA_DEPS
-    "base_matlab.i"
-    "base/any.i"
-    "base/event.i"
-    "base/node.i"
-    "base/object.i"
-    "base/subject.i"
-    "base/timesequence.i"
-    "base/trial.i")
   SET(SWIG_MODULE_maMEX_EXTRA_FLAGS
-    # "-debug-tmsearch"
-    "-I${PROJECT_SOURCE_DIR}/modules/bindings/swig"
-    "-I${SWIG_DIR}/Lib/matlab"
-    "-I${SWIG_DIR}/Lib")
+    ${SWIG_MODULE_base_EXTRA_FLAGS}
+    "-I${SWIG_DIR}/Lib/matlab")
   SWIG_ADD_MODULE(maMEX matlab "${BASE_MATLAB_SRCS}")
   TARGET_INCLUDE_DIRECTORIES(maMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
   SWIG_LINK_LIBRARIES(maMEX base bindings ${MATLAB_LIBRARIES})
@@ -26,4 +29,19 @@ IF(BUILD_MATLAB_BINDINGS)
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma"
     PREFIX ""
     SUFFIX ".${MATLAB_MEXFILE_EXT}")
+ENDIF()
+
+IF(BUILD_PYTHON_BINDINGS)
+  SET(BASE_PYTHON_SRCS
+    "base.i")
+  SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
+  SET(SWIG_MODULE_maPY_EXTRA_FLAGS
+    ${SWIG_MODULE_base_EXTRA_FLAGS}
+    "-I${SWIG_DIR}/Lib/python")
+  SWIG_ADD_MODULE(maPY python "${BASE_PYTHON_SRCS}")
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_maPY_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
+  SWIG_LINK_LIBRARIES(maPY base bindings ${PYTHON_LIBRARY})
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_maPY_REAL_NAME} PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
+  
 ENDIF()
