--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -35,13 +35,13 @@ IF(BUILD_PYTHON_BINDINGS)
   SET(BASE_PYTHON_SRCS
     "base.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
-  SET(SWIG_MODULE_maPY_EXTRA_FLAGS
+  SET(SWIG_MODULE_ma_EXTRA_FLAGS
     ${SWIG_MODULE_base_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
-  SWIG_ADD_MODULE(maPY python "${BASE_PYTHON_SRCS}")
-  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_maPY_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
-  SWIG_LINK_LIBRARIES(maPY base bindings ${PYTHON_LIBRARY})
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_maPY_REAL_NAME} PROPERTIES
+  SWIG_ADD_MODULE(ma python "${BASE_PYTHON_SRCS}")
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_ma_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
+  SWIG_LINK_LIBRARIES(ma base bindings ${PYTHON_LIBRARY})
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_ma_REAL_NAME} PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
   
 ENDIF()
