First unit test for the Python module.

--- a/modules/base/test/CMakeLists.txt
+++ b/modules/base/test/CMakeLists.txt
@@ -3,3 +3,7 @@ ADD_SUBDIRECTORY("c++")
 IF(BUILD_MATLAB_BINDINGS)
   ADD_SUBDIRECTORY("matlab")
 ENDIF()
+
+IF(BUILD_PYTHON_BINDINGS)
+  ADD_SUBDIRECTORY("python")
+ENDIF()
