--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -24,8 +24,8 @@ IF(BUILD_MATLAB_BINDINGS)
     ${SWIG_MODULE_base_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/matlab")
   SWIG_ADD_MODULE(maMEX matlab "${BASE_MATLAB_SRCS}")
-  TARGET_INCLUDE_DIRECTORIES(maMEX PRIVATE "${MATLAB_INCLUDE_DIR}")
   SWIG_LINK_LIBRARIES(maMEX base bindings ${MATLAB_LIBRARIES})
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_maMEX_REAL_NAME} PRIVATE "${MATLAB_INCLUDE_DIR}")
   SET_TARGET_PROPERTIES(${SWIG_MODULE_maMEX_REAL_NAME} PROPERTIES
     COMPILE_DEFINITIONS "_SWIG_MATLAB"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma"
@@ -43,9 +43,8 @@ IF(BUILD_PYTHON_BINDINGS)
     ${SWIG_MODULE_base_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
   SWIG_ADD_MODULE(ma python "${BASE_PYTHON_SRCS}")
-  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_ma_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
   SWIG_LINK_LIBRARIES(ma base bindings ${PYTHON_LIBRARY})
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_ma_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
   SET_TARGET_PROPERTIES(${SWIG_MODULE_ma_REAL_NAME} PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
-  
 ENDIF()
