--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -1,6 +1,5 @@
 SET_SOURCE_FILES_PROPERTIES("base.i" PROPERTIES CPLUSPLUS ON)
 SET(SWIG_MODULE_base_EXTRA_DEPS
-  "base_matlab.i"
   "base/any.i"
   "base/event.i"
   "base/node.i"
@@ -19,7 +18,8 @@ IF(BUILD_MATLAB_BINDINGS)
     "../../bindings/include/openma/matlab/mexFunction.def")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma")
   SET(SWIG_MODULE_maMEX_EXTRA_DEPS
-    ${SWIG_MODULE_base_EXTRA_DEPS})
+    ${SWIG_MODULE_base_EXTRA_DEPS}
+    "base_matlab.i")
   SET(SWIG_MODULE_maMEX_EXTRA_FLAGS
     ${SWIG_MODULE_base_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/matlab")
@@ -38,7 +38,8 @@ IF(BUILD_PYTHON_BINDINGS)
     "base.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
   SET(SWIG_MODULE_ma_EXTRA_DEPS
-    ${SWIG_MODULE_base_EXTRA_DEPS})
+    ${SWIG_MODULE_base_EXTRA_DEPS}
+    "base_python.i")
   SET(SWIG_MODULE_ma_EXTRA_FLAGS
     ${SWIG_MODULE_base_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
