New way to create the Python package 'ma'.

--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -36,7 +36,7 @@ ENDIF()
 IF(BUILD_PYTHON_BINDINGS)
   SET(BASE_PYTHON_SRCS
     "base.i")
-  SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
+  SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
   SET(SWIG_MODULE_ma_EXTRA_DEPS
     ${SWIG_MODULE_base_EXTRA_DEPS}
     "base_python.i")
@@ -47,5 +47,7 @@ IF(BUILD_PYTHON_BINDINGS)
   SWIG_LINK_LIBRARIES(ma base bindings ${PYTHON_LIBRARY})
   TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_ma_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
   SET_TARGET_PROPERTIES(${SWIG_MODULE_ma_REAL_NAME} PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma")
+    LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
+  ADD_CUSTOM_COMMAND(TARGET ${SWIG_MODULE_ma_REAL_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E rename "ma.py" "__init__.py" WORKING_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
 ENDIF()
