--- a/modules/body/swig/CMakeLists.txt
+++ b/modules/body/swig/CMakeLists.txt
@@ -33,7 +33,7 @@ ENDIF()
 IF(BUILD_PYTHON_BINDINGS)
   SET(BODY_PYTHON_SRCS
     "body.i")
-  SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/body")
+  SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
   SET(SWIG_MODULE_body_EXTRA_FLAGS
     ${SWIG_MODULE_body_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
@@ -41,5 +41,5 @@ IF(BUILD_PYTHON_BINDINGS)
   SWIG_LINK_LIBRARIES(body body bindings ${PYTHON_LIBRARY})
   TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_body_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
   SET_TARGET_PROPERTIES(${SWIG_MODULE_body_REAL_NAME} PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/body")
+    LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
 ENDIF()
