--- a/modules/io/swig/CMakeLists.txt
+++ b/modules/io/swig/CMakeLists.txt
@@ -30,7 +30,7 @@ ENDIF()
 IF(BUILD_PYTHON_BINDINGS)
   SET(BASE_PYTHON_SRCS
     "io.i")
-  SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/io")
+  SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
   SET(SWIG_MODULE_io_EXTRA_DEPS ${SWIG_MODULE_io_EXTRA_DEPS})
   SET(SWIG_MODULE_io_EXTRA_FLAGS
     ${SWIG_MODULE_io_EXTRA_FLAGS}
@@ -39,5 +39,5 @@ IF(BUILD_PYTHON_BINDINGS)
   SWIG_LINK_LIBRARIES(io io bindings ${PYTHON_LIBRARY})
   TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_io_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
   SET_TARGET_PROPERTIES(${SWIG_MODULE_io_REAL_NAME} PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/io")
+    LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
 ENDIF()
