New unit test for the Matlab class ma.Trial.

--- a/modules/base/test/matlab/CMakeLists.txt
+++ b/modules/base/test/matlab/CMakeLists.txt
@@ -1,5 +1,7 @@
 SET(TOOLBOX_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/swig/matlab/openma")
 SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
-ADD_MATLAB_TESTDRIVER(matlab_base_any AnyTest.m INCLUDES ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
-ADD_MATLAB_TESTDRIVER(matlab_base_node NodeTest.m INCLUDES ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
-ADD_MATLAB_TESTDRIVER(matlab_base_timesequence TimeSequenceTest.m INCLUDES ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
+SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
+ADD_MATLAB_TESTDRIVER(matlab_base_any AnyTest.m INCLUDES ${MTD_DIRS})
+ADD_MATLAB_TESTDRIVER(matlab_base_node NodeTest.m INCLUDES ${MTD_DIRS})
+ADD_MATLAB_TESTDRIVER(matlab_base_timesequence TimeSequenceTest.m INCLUDES ${MTD_DIRS})
+ADD_MATLAB_TESTDRIVER(matlab_base_trial TrialTest.m INCLUDES ${MTD_DIRS})
