--- a/modules/base/test/python/CMakeLists.txt
+++ b/modules/base/test/python/CMakeLists.txt
@@ -2,4 +2,5 @@ SET(PACKAGE_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/swig/python/openma")
 SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY})
 
+ADD_PYTHON_TESTDRIVER(python_base_any anyTest INCLUDES ${PTD_DIRS})
 ADD_PYTHON_TESTDRIVER(python_base_node nodeTest INCLUDES ${PTD_DIRS})
