New unit tests for the Python class ma.TimeSequence.

--- a/modules/base/test/python/CMakeLists.txt
+++ b/modules/base/test/python/CMakeLists.txt
@@ -4,3 +4,4 @@ SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY})
 
 ADD_PYTHON_TESTDRIVER(python_base_any anyTest INCLUDES ${PTD_DIRS})
 ADD_PYTHON_TESTDRIVER(python_base_node nodeTest INCLUDES ${PTD_DIRS})
+ADD_PYTHON_TESTDRIVER(python_base_timesequence timeSequenceTest INCLUDES ${PTD_DIRS})
