New unit test for the force plate type 5.

--- a/modules/instrument/test/CMakeLists.txt
+++ b/modules/instrument/test/CMakeLists.txt
@@ -1,2 +1,3 @@
 ADD_CXXTEST_TESTDRIVER(openma_instrument_forceplatetype2 forceplatetype2Test.cpp instrument)
 ADD_CXXTEST_TESTDRIVER(openma_instrument_forceplatetype4 forceplatetype4Test.cpp instrument)
+ADD_CXXTEST_TESTDRIVER(openma_instrument_forceplatetype5 forceplatetype5Test.cpp instrument)
