Work in progress to generate hardware nodes from C3D parameters (e.g. force plates). NOTE: This code needs to be improved to add at runtime new hardware nodes (i.e. using plugins).

--- a/modules/io/CMakeLists.txt
+++ b/modules/io/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(OPENMA_STATIC_IO_PLUGINS_SRCS "" CACHE INTERNAL "")
 ADD_SUBDIRECTORY("plugins")
 
 ADD_LIBRARY(io ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_IO_SRCS} ${OPENMA_STATIC_IO_PLUGINS_SRCS})
-TARGET_LINK_LIBRARIES(io base)
+TARGET_LINK_LIBRARIES(io instrument)
 TARGET_INCLUDE_DIRECTORIES(io PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/plugins>
