--- a/modules/body/test/c++/CMakeLists.txt
+++ b/modules/body/test/c++/CMakeLists.txt
@@ -1,3 +1,9 @@
+ADD_CXXTEST_TESTDRIVER(openma_body_anchor anchorTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_chain chainTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_dempstertable dempstertableTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_eulerdescriptor eulerdescriptorTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_inertialparametersTest inertialparametersTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_inversedynamicsmatrix inversedynamicsmatrixTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_joint jointTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_model modelTest.cpp body)
@@ -6,5 +12,7 @@ ADD_CXXTEST_TESTDRIVER(openma_body_plugingait plugingaitTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_calibration plugingaitTest_calibration.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_reconstruction plugingaitTest_reconstruction.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_kinematics plugingaitTest_kinematics.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
+ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_kinetics plugingaitTest_kinetics.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_segment segmentTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_simplegaitforceplatetofeetassigner simplegaitforceplatetofeetassignerTest.cpp INCLUDES "${OPENMA_BINARY_DIR}/modules/io/test" LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_utils utilsTest.cpp body)
