New Matlab functions to generate the path for in/out files used in unit tests.

--- a/modules/io/test/matlab/CMakeLists.txt
+++ b/modules/io/test/matlab/CMakeLists.txt
@@ -1,5 +1,8 @@
 SET(TOOLBOX_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/swig/matlab/openma")
 SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
-SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
+SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY} "${CMAKE_CURRENT_BINARY_DIR}")
+
+CONFIGURE_FILE(testDataPathIn.m.in ${CMAKE_CURRENT_BINARY_DIR}/testDataPathIn.m)
+CONFIGURE_FILE(testDataPathOut.m.in ${CMAKE_CURRENT_BINARY_DIR}/testDataPathOut.m)
 
 ADD_MATLAB_TESTDRIVER(matlab_io IOTest.m INCLUDES ${MTD_DIRS})
