--- a/modules/io/test/matlab/OpenMATDDPathOut.m.in
+++ b/modules/io/test/matlab/OpenMATDDPathOut.m.in
@@ -1,2 +1,2 @@
-function path = testDataPathOut(rel)
+function path = OpenMATDDPathOut(rel)
     path = ['${PROJECT_BINARY_DIR}/test/data/output/' , rel];
