New util functions for the Python unit tests.

--- a/modules/io/test/python/CMakeLists.txt
+++ b/modules/io/test/python/CMakeLists.txt
@@ -1,5 +1,7 @@
 SET(PACKAGE_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/swig/python/openma")
 SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
-SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY})
+SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY} "${CMAKE_CURRENT_BINARY_DIR}")
+
+CONFIGURE_FILE(test_file_path.py.in ${CMAKE_CURRENT_BINARY_DIR}/test_file_path.py)
 
 ADD_PYTHON_TESTDRIVER(python_io ioTest INCLUDES ${PTD_DIRS})
